src/test/resources/invalid_tests/InvalidFixedOutputUnits.cnna
architecture InvalidFixedOutputUnits{
    def input in
    def output out
    
    in ->
    fullyConnected(units=64)
    activation.tanh()
    output {
        fullyConnected(units=4)
        activation.softmax()
    } -> out
}